# ecommerce-python

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/ecommerce/: __main__.py
src/ecommerce/app/: db.py
src/ecommerce/app/api/: main.py
src/ecommerce/app/cart/: __init__.py
src/ecommerce/app/orders/: __init__.py
src/ecommerce/app/orders/controller/: order_controller.py
src/ecommerce/app/orders/model/: order.py
src/ecommerce/app/orders/service/: order_service.py
src/ecommerce/app/payments/: __init__.py
src/ecommerce/app/products/: __init__.py
tests/cart/: test_cart.py
tests/orders/: test_order.py  test_order_api.py
tests/payments/: test_payment.py
tests/products/: test_product.py
tests/users/: test_user.py
