[tool.poetry]
name = "ecommerce-python"
version = "0.1.0"
description = "A practice ecommerce application in Python"
authors = ["Fernando Teixeira"]

packages = [
	{ include = "ecommerce", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
