[tool.poetry]
name = "ecommerce-python"
version = "0.1.0"
description = "A practice ecommerce application in Python"
authors = ["Fernando Teixeira"]

packages = [
	{ include = "ecommerce", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"

httpx = "^0.27.0"
asgi-lifespan = "^2.1.0"
sqlalchemy = "^2.0.0"
databases = "^0.8.0"
asyncpg = "^0.29.0"
pydantic = "^2.0.0"
uvicorn = "^0.29.0"
psycopg2-binary = "^2.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
